<resources>
    <string name="app_name">Wetter Daten</string>
    <string name="_8_c">8°C</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="_25">25%</string>
    <string name="weather_data">Weather Data</string>
    <string name="location">Location</string>
    <string name="homburg">Homburg</string>
    <string name="_16_00">16:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cold">Cold</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="weekly_view">Weekly View</string>
    <string name="weekly_overview">Weekly Overview</string>
</resources>