<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape6">

    <RelativeLayout
        android:id="@+id/locationRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapedark"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019">

        <ImageView
            android:id="@+id/locationImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            app:srcCompat="@drawable/ic_outline_location_on_24" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/locationImageView"
            android:text="@string/homburg"
            android:textColor="#fff" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/connectionRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapedark"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019">

        <ImageView
            android:id="@+id/connectionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            app:srcCompat="@drawable/ic_outline_network_wifi_2_bar_24" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/tempRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape8"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/humidityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/location"
            app:srcCompat="@drawable/ic_outline_water_drop_24" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/humidityImageView"
            android:text="@string/humidity"
            android:textColor="#FFF8E1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currentHumidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/humidityTextView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/humidityImageView"
            android:text="@string/_75"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

        <ImageView
            android:id="@+id/timeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/humidityTextView"
            app:srcCompat="@drawable/ic_outline_access_time_24" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/timeImageView"
            android:text="@string/time"
            android:textColor="#FFF8E1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currentTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeTextView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/timeImageView"
            android:text="@string/_16_00"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar2"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:rotation="180"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress="75"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/blue"
        app:cpb_progressbar_width="12dp"
        app:cpb_round_border="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/long_term_data"
        android:textColor="#fff"
        app:circularflow_radiusInDP="17dp"
        app:icon="@drawable/ic_outline_insert_chart_24"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        app:strokeColor="@color/violet"
        app:strokeWidth="3dp" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:rotation="180"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress="10"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/violet"
        app:cpb_progressbar_width="12dp"
        app:cpb_round_border="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8_c"
        android:textColor="#fff"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/descriptionTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="#fff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView2"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/humidityTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_75"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <ImageView
        android:id="@+id/descriptionImageView"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/descriptionTextView"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/cold" />

    <ImageView
        android:id="@+id/descriptionImageView2"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/descriptionTextView"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView2"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/humidity" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cold"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView"
        app:layout_constraintVertical_bias="0.027" />

</androidx.constraintlayout.widget.ConstraintLayout>